[gd_scene load_steps=7 format=3 uid="uid://pmk7r1j14c54"]

[ext_resource type="Script" uid="uid://cf3201mcisvfp" path="res://torch.gd" id="1_pa17o"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5w7kb"]
radius = 0.9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pa17o"]
albedo_color = Color(0.15, 0.15, 0.17, 1)

[sub_resource type="SphereMesh" id="SphereMesh_s1444"]
material = SubResource("StandardMaterial3D_pa17o")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w3qnr"]
albedo_color = Color(1, 1, 0.17, 1)

[sub_resource type="SphereMesh" id="SphereMesh_kx7w4"]
material = SubResource("StandardMaterial3D_w3qnr")
radius = 0.55

[node name="Torch" type="Area3D"]
collision_layer = 0
script = ExtResource("1_pa17o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_5w7kb")

[node name="Unlit" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("SphereMesh_s1444")

[node name="LitBeacon" type="MeshInstance3D" parent="."]
visible = false
layers = 2
mesh = SubResource("SphereMesh_kx7w4")

[node name="OmniLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.709049, 0)
light_color = Color(0.87, 0.9, 0, 1)
light_cull_mask = 4294967293

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
